# notes

./: astro.config.mjs  package.json  pnpm-lock.yaml
src/content/docs/: diversity.html  diversity.md  hybrid-recommenders.html  hybrid-recommenders.md  index.mdx  knowledge-based-recs.html  knowledge-based-recs.md  matrix-factorisation.html  matrix-factorisation.md
src/content/docs/ml/: pyproject.toml
src/content/docs/ml/notebooks/.ipynb_checkpoints/: data1-checkpoint.csv  features-checkpoint.ipynb  generate-checkpoint.py  regression-checkpoint.ipynb  utils-checkpoint.py
src/content/docs/ml/notebooks/1-regression/: generate.py  regression-solutions.ipynb  regression.ipynb  utils.py
src/content/docs/ml/notebooks/1-regression/.ipynb_checkpoints/: regression-checkpoint.ipynb
src/content/docs/ml/notebooks/1-regression/data/: answers  data2.csv
src/content/docs/ml/notebooks/2-vectors/: vectors.ipynb
src/content/docs/ml/notebooks/2-vectors/.ipynb_checkpoints/: vectors-checkpoint.ipynb
unorganised-notes/crypto/: block-ciphers.md  glossary.md  message-digest.md  motivation.md  simple-cipher.md
unorganised-notes/crypto/mathematical-foundations/: information-theory.md  modular-arithmetic.md  polynomial-arithmetic.md  xor.md
unorganised-notes/crypto/traditional-encryption/: substitution-ciphers.md  traditional encryption.md  transposition-ciphers.md
unorganised-notes/suge/: 2022-papst paper.md  Growth Model.md  acquisition.md  activation.md  compounding-growth-mechanisms.md  network-effects.md  retention.md  what-we-need-to-know.md
(+21 files in other folders)
